--- a/sass/main.css
+++ b/sass/main.css
@@ -14,12 +14,10 @@
   color: rgb(255, 255, 255);
 }
 
-/* PAGINA DE INICIO */
 html {
   min-height: 100vh;
 }
-
-body {
+html body {
   min-height: 100vh;
   background-color: black;
   display: grid;
@@ -28,42 +26,30 @@ body {
   grid-template-areas: "header" "main" "pie";
 }
 
-header {
-  grid-area: header;
-}
-
 .banner {
   background-image: url(../img/gunsnrosesbanner.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.encabezado {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+header {
+  grid-area: header;
 }
-.encabezado .encabezado__titulo {
-  margin-left: 0.5rem;
-  font-family: "Roboto", sans-serif;
-}
-.encabezado .encabezado__contenedor {
-  display: flex;
-  align-items: center;
-}
-.encabezado .encabezado__logo-titulo {
+
+.encabezado__logo-titulo {
   width: 70px;
   height: 70px;
 }
-.encabezado .navegador__item {
-  text-decoration: none;
-  display: inline;
+
+.color-nav {
+  color: white;
+  transition: 0.3s;
+  font-size: 1.2rem;
+  font-family: "Alegreya Sans SC", sans-serif;
 }
-.encabezado .navegador__item a {
-  text-decoration: none;
-  margin: 1rem;
-  color: rgb(255, 255, 255);
-  font-weight: 600;
+.color-nav:hover {
+  transform: scale(1.05);
+  color: white;
 }
 
 main {
@@ -73,23 +59,34 @@ main {
 main .titulo {
   color: rgb(0, 0, 0);
   font-size: 3.5rem;
-  -webkit-text-stroke: 2px rgb(255, 102, 0);
+  -webkit-text-stroke: 2px rgb(255, 0, 0);
   position: absolute;
   top: 50.5%;
-  left: 30.8%;
-  font-family: "Fraunces", serif;
+  left: 29.1%;
+  font-family: "Archivo Black", sans-serif;
+  transition: all 0.3s;
 }
-
-.color-nav {
-  color: white;
-  transition: 0.3s;
-  font-size: 1.2rem;
-  font-family: "Alegreya Sans SC", sans-serif;
+@media screen and (max-width: 1180px) {
+  main .titulo {
+    font-size: 3.3rem;
+    left: 25.5%;
+  }
 }
-
-.color-nav:hover {
+@media screen and (max-width: 900px) {
+  main .titulo {
+    left: 22%;
+    font-size: 3rem;
+  }
+}
+@media screen and (max-width: 670px) {
+  main .titulo {
+    left: 18%;
+    font-size: 2rem;
+  }
+}
+main .titulo .titulo:hover {
   transform: scale(1.05);
-  color: white;
+  -webkit-text-stroke: 3px rgb(255, 0, 0);
 }
 
 .footer {
@@ -118,7 +115,7 @@ main .titulo {
   background: rgb(18, 180, 18);
 }
 .footer .icon2:hover {
-  background: red;
+  background: rgb(255, 0, 0);
 }
 .footer .icon3:hover {
   background: rgb(79, 79, 241);
@@ -130,21 +127,34 @@ main .titulo {
   background: rgb(192, 19, 126);
 }
 
-/* PAGINA DE INICIO */
-/* PAGINA DE INTEGRANTES */
 .info {
   display: flex;
   align-items: center;
 }
+@media screen and (max-width: 900px) {
+  .info {
+    flex-direction: column;
+  }
+}
 .info .cantante {
-  width: 330px;
+  width: 22rem;
   height: auto;
   margin: 3rem 2rem 3rem 2rem;
+}
+@media screen and (max-width: 1180px) {
+  .info .cantante {
+    width: 20rem;
+  }
 }
 .info .info-cantante {
   color: white;
   margin: 1rem 2rem 2rem 2rem;
-  font-size: large;
+  font-size: 1.18rem;
+}
+@media screen and (max-width: 1180px) {
+  .info .info-cantante {
+    font-size: 1.1rem;
+  }
 }
 .info .info-cantante::first-letter {
   color: goldenrod;
@@ -156,21 +166,41 @@ main .titulo {
   display: flex;
   flex-direction: row-reverse;
 }
+@media screen and (max-width: 900px) {
+  #axl {
+    flex-direction: column;
+  }
+}
 
 #izzy {
   display: flex;
   flex-direction: row-reverse;
 }
+@media screen and (max-width: 900px) {
+  #izzy {
+    flex-direction: column;
+  }
+}
 
-/* PAGINA DE INTEGRANTES */
-/* PAGINA DE DISCOGRAFIA */
 .album {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   margin-top: 5rem;
 }
-.album .album_contenedor {
-  align-items: center;
+@media screen and (max-width: 1180px) {
+  .album {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media screen and (max-width: 900px) {
+  .album {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 670px) {
+  .album {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 .album .album__nombre {
   font-size: 1.1rem;
@@ -190,11 +220,8 @@ main .titulo {
 }
 .album .album__disco:hover {
   transform: scale(1.05);
-  border: 2px solid rgb(63, 63, 63);
 }
 
-/* PAGINA DE DISCOGRAFIA */
-/* PAGINA DE TOUR */
 .tour {
   background-color: rgb(39, 38, 38);
   border-style: solid;
@@ -210,6 +237,11 @@ main .titulo {
   font-size: 1.5rem;
   font-family: "Rubik", sans-serif;
   -webkit-text-stroke: 1px rgb(255, 102, 0);
+}
+@media screen and (max-width: 670px) {
+  .tour .tour-info {
+    font-size: 1.3rem;
+  }
 }
 
 .tour1 {
@@ -229,11 +261,15 @@ main .titulo {
   margin-bottom: 1rem;
   -webkit-text-stroke: 0.1px rgb(255, 102, 0);
 }
+@media screen and (max-width: 670px) {
+  .boton-padre .boton {
+    width: 6rem;
+    font-size: 0.9rem;
+  }
+}
 
-/* PAGINA DE TOUR */
-/* PAGINA DE CONTACTO */
 .formulario {
-  width: 450px;
+  width: 590px;
   margin: auto;
   background: rgb(61, 60, 60);
   padding: 10px 20px;
@@ -241,21 +277,52 @@ main .titulo {
   box-sizing: border-box;
   border-radius: 20px;
 }
+@media screen and (max-width: 1180px) {
+  .formulario {
+    width: 500px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .formulario {
+    width: 450px;
+  }
+}
+@media screen and (max-width: 670px) {
+  .formulario {
+    width: 350px;
+  }
+}
 .formulario .formulario__titulo {
-  color: red;
-  -webkit-text-stroke: 1.3px black;
+  color: rgb(255, 0, 0);
+  -webkit-text-stroke: 0.12rem black;
   text-align: center;
-  font-size: 30px;
+  font-size: 3rem;
   margin-bottom: 20px;
-  font-family: monospace;
+  font-family: "Alegreya Sans SC", sans-serif;
   margin: 0;
+  padding-bottom: 0.7rem;
+  transition: all 0.3s;
+}
+.formulario .formulario__titulo:hover {
+  color: black;
+  -webkit-text-stroke: 0.12rem rgb(255, 0, 0);
+}
+.formulario .formulario__nombre {
+  font-size: 1.3rem;
+  font-family: "Alegreya Sans SC", sans-serif;
+  color: white;
+}
+@media screen and (max-width: 670px) {
+  .formulario .formulario__nombre {
+    font-size: 1.15rem;
+  }
 }
 .formulario .formulario__input {
   width: 100%;
   margin-bottom: 20px;
   padding: 7px;
-  box-sizing: border-box;
   font-size: 17px;
+  border-radius: 6px;
 }
 .formulario .formulario__textarea {
   width: 100%;
@@ -265,12 +332,33 @@ main .titulo {
   font-size: 17px;
   min-height: 100px;
   max-height: 100px;
+  border-radius: 6px;
 }
 .formulario .formulario__boton {
   color: white;
   border-radius: 10px;
   background-color: rgb(255, 0, 0);
-  width: 12.67rem;
+  width: 10rem;
+  margin-left: 5rem;
+  font-family: "Alegreya Sans SC", sans-serif;
+  transition: all 0.3s;
 }
-
-/* PAGINA DE CONTACTO *//*# sourceMappingURL=main.css.map */
+@media screen and (max-width: 1180px) {
+  .formulario .formulario__boton {
+    width: 8rem;
+  }
+}
+@media screen and (max-width: 900px) {
+  .formulario .formulario__boton {
+    width: 6rem;
+  }
+}
+@media screen and (max-width: 670px) {
+  .formulario .formulario__boton {
+    width: 4.5rem;
+    margin-left: 3.44rem;
+  }
+}
+.formulario .formulario__boton:hover {
+  color: black;
+}/*# sourceMappingURL=main.css.map */
