--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,310 +1,10 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-*::selection {
-    background: rgb(255, 94, 0);
-    color: rgb(255, 255, 255);
-}
-
-/* PAGINA DE INICIO */
-html {
-    min-height: 100vh;
-}
-
-body {
-    min-height: 100vh;
-    background-color: black;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr auto;
-    grid-template-areas: 
-    "header"
-    "main"
-    "pie";
-}
-
-header {
-    grid-area: header;
-}
-
-
-.banner {
-    background-image: url(../img/gunsnrosesbanner.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.encabezado {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    
-
-    .encabezado__titulo {
-        margin-left: .5rem;
-        font-family: 'Roboto', sans-serif;
-    
-    }
-
-    .encabezado__contenedor {
-        display: flex;
-        align-items: center;
-    
-    }
-
-    .encabezado__logo-titulo {
-        width: 70px;
-        height: 70px;
-    }
-    
-    .navegador__item {
-        text-decoration: none;
-        display: inline;
-    }
-    
-    .navegador__item a {
-        text-decoration: none;
-        margin: 1rem;
-        color: rgb(255, 255, 255);
-        font-weight: 600;
-    }
-    
-}
-
-main {
-    grid-area: main;
-    position: relative;
-    
-    .titulo {
-        color: rgb(0, 0, 0);
-        font-size: 3.5rem;
-        -webkit-text-stroke: 2px rgb(255, 102, 0);
-        position: absolute;
-        top: 50.50%;
-        left: 30.80%;
-        font-family: 'Fraunces', serif;
-    }
-}
-
-
-.color-nav {
-    color:white;
-    transition: 0.3s;
-    font-size: 1.2rem;
-    font-family: 'Alegreya Sans SC', sans-serif;
-}
-.color-nav:hover {
-    transform: scale(1.05);
-    color: white;
-}
-
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    bottom: 0;
-    width: 100%;
-    margin-top: auto;
-    padding: 0;
-    grid-area: footer;
-
-    .redes {
-        margin: 0 0.4rem;
-        width:  40px;
-        height: 40px;
-        text-align: center;
-        line-height: 40px;
-        background: rgb(29, 29, 29);
-        border-radius: 50%;
-        margin-bottom: 0.5rem;
-        margin-top: 1.2rem;
-        transition: all 0.3s ease;
-    }
-
-    .icon1:hover {
-        background: rgb(18, 180, 18);
-    }
-    .icon2:hover {
-        background: red;
-    }
-    .icon3:hover {
-        background: rgb(79, 79, 241);
-    }
-    .icon4:hover {
-        background: rgb(5, 5, 192);
-    }
-    .icon5:hover {
-        background: rgb(192, 19, 126);
-    }
-}
-
-
-/* PAGINA DE INICIO */
-
-/* PAGINA DE INTEGRANTES */
-
-.info {
-    display: flex;
-    align-items: center;
-
-    .cantante {
-        width: 330px;
-        height: auto;
-        margin: 3rem 2rem 3rem 2rem;
-    }
-    
-    .info-cantante {
-        color: white;
-        margin: 1rem 2rem 2rem 2rem;
-        font-size: large;
-    }
-    .info-cantante::first-letter {
-        color: goldenrod;
-        font-size: 1.3rem;
-    }
-    
-}   
-#axl {
-    margin-top: 5rem;
-    display: flex;
-    flex-direction: row-reverse;
- }
-
-#izzy {
-    display: flex;
-    flex-direction: row-reverse;
-}
-
-/* PAGINA DE INTEGRANTES */
-
-/* PAGINA DE DISCOGRAFIA */
-
-.album {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    margin-top: 5rem;    
-
-    .album_contenedor {
-        align-items: center;
-        
-    }
-    
-    .album__nombre {
-        font-size: 1.10rem;
-        text-align: center;
-        color: rgb(255, 102, 0);
-        -webkit-text-stroke: .80px rgb(179, 0, 0);
-        padding-top: .45rem;
-        font-family: 'Kanit', sans-serif;
-    }
-    
-    .album__disco {
-        margin: 2rem 0rem 0rem 2rem;
-        transition: 0.3s;
-        width: 12rem;
-        object-fit:cover;
-        border: 1px solid rgb(17, 17, 17);
-  
-    }
-
-    .album__disco:hover {
-        transform: scale(1.05);
-        border: 2px solid rgb(63, 63, 63);
-    }
-}
-
-
-
-/* PAGINA DE DISCOGRAFIA */
-
-/* PAGINA DE TOUR */
-.tour {
-   background-color: rgb(39, 38, 38);
-    border-style: solid;
-    border-color: rgb(255, 102, 0);
-    border-width: 2px;
-    margin: 1.5rem 1.5rem 0.5rem 1.5rem;
-  
-    display: flex;
-    justify-content: space-between;
-
-    .tour-info {
-        margin: 1rem;
-        color: beige;
-        font-size: 1.5rem;
-        font-family: 'Rubik', sans-serif;
-        -webkit-text-stroke: 1px rgb(255, 102, 0);
-    }
-}
-.tour1 {
-    margin-top: 7.2rem;
-}
-
-.boton-padre {
-    display: flex;
-    justify-content: center;
-
-   .boton {
-    color: rgb(255, 255, 255);
-    background-color: rgb(39, 38, 38);
-    width: 8.50rem;
-    border: 2px solid rgb(255, 0, 0);
-    font-family: 'Rubik', sans-serif;
-    margin-bottom: 1rem;
-    -webkit-text-stroke: .10px rgb(255, 102, 0);
-   }
-}
-/* PAGINA DE TOUR */
-
-/* PAGINA DE CONTACTO */
-.formulario {
-    width: 450px;
-    margin: auto;
-    background: rgb(61, 60, 60);
-    padding: 10px 20px;
-    margin-top: 8rem;
-    box-sizing: border-box;
-    border-radius: 20px;
-
-    .formulario__titulo {
-        color: red;
-        -webkit-text-stroke: 1.30px black;
-        text-align: center;
-        font-size: 30px;
-        margin-bottom: 20px;
-        font-family: monospace;
-        margin: 0;
-    }
-    
-    .formulario__input {
-        width: 100%;
-        margin-bottom: 20px;
-        padding: 7px;
-        box-sizing: border-box;
-        font-size: 17px;
-    }
-    .formulario__textarea {
-        width: 100%;
-        margin-bottom: 20px;
-        padding: 7px;
-        box-sizing: border-box;
-        font-size: 17px;
-        min-height: 100px;
-        max-height: 100px;
-    }
-    
-    .formulario__boton {
-        color: white;
-        border-radius: 10px;
-        background-color: rgb(255, 0, 0);
-        width: 12.67rem;
-    }
-    
-}
-
-
-/* PAGINA DE CONTACTO */
+@import "./partials/variables";
+@import "./partials/body";
+@import "./partials/media";
+@import "./partials/header";
+@import "./partials/inicio";
+@import "./partials/footer";
+@import "./partials/integrantes";
+@import "./partials/discografía";
+@import "./partials/tour";
+@import "./partials/contacto";
