--- a/sass/partials/_tour.scss
+++ b/sass/partials/_tour.scss
@@ -18,7 +18,12 @@
      @include media3 {
         font-size: 1.3rem;
      }
+     @include media4 {
+        font-size: 1rem;
+        margin: .5rem;
      }
+
+    }
  }
  .tour1 {
      margin-top: 7.2rem;
