--- a/sass/partials/_discografía.scss
+++ b/sass/partials/_discografía.scss
@@ -39,6 +39,7 @@
         @include media4 {
             width: 10rem;
             border: .8px solid rgb(17, 17, 17);
+            margin: 2rem 0rem 0rem .6rem;
         }
   
     }
