--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -9,6 +9,8 @@
     grid-area: footer;
 
     .redes {
+        color: rgb(211, 211, 211);
+        font-size: 1.35rem;
         margin: 0 0.4rem;
         width:  40px;
         height: 40px;
