--- a/sass/partials/_tour.scss
+++ b/sass/partials/_tour.scss
@@ -4,9 +4,12 @@
      border-color: $naranja;
      border-width: 2px;
      margin: 1.5rem 1.5rem 0.5rem 1.5rem;
-   
      display: flex;
      justify-content: space-between;
+
+     @include media3 {
+      margin: 1rem 1rem 0.25rem 1rem;
+     }
  
      .tour-info {
          margin: 1rem;
