--- a/sass/main.css
+++ b/sass/main.css
@@ -151,6 +151,11 @@ header .color-nav:hover {
   height: auto;
   margin: 3rem 2rem 3rem 2rem;
 }
+@media screen and (max-width: 670px) {
+  .info .cantante {
+    width: 20rem;
+  }
+}
 .info .info-cantante {
   color: white;
   margin: 1rem 2rem 2rem 2rem;
@@ -160,6 +165,11 @@ header .color-nav:hover {
   .info .info-cantante {
     font-size: 1.1rem;
     margin: 0rem 2rem 2.5rem 2rem;
+  }
+}
+@media screen and (max-width: 670px) {
+  .info .info-cantante {
+    font-size: 1rem;
   }
 }
 .info .info-cantante::first-letter {
