--- a/sass/partials/_body.scss
+++ b/sass/partials/_body.scss
@@ -30,5 +30,6 @@ html {
         background-image: url(../img/gunsnrosesbanner.jpg);
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center;
     }
 }
